--- a/style.scss
+++ b/style.scss
@@ -13,7 +13,8 @@ html,
 body {
   margin: 0;
   overflow-x: hidden;
-  //scroll-behavior: smooth;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   //cursor: none;
 }
 
@@ -38,6 +39,20 @@ html.lenis {
 }
 
 .main {
+  background-color: $color-orange;
+
+  h1,h3 {
+    font-family: "komet", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    font-size: clamp(50px, 11vw, 120px);
+  }
+
+  a {
+    font-family: "komet", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+  }
 
   .header {
     position: fixed;
@@ -55,7 +70,7 @@ html.lenis {
     }
     
   }
-  
+
   .menu {
     position: fixed;
     left: -5%;
@@ -68,7 +83,11 @@ html.lenis {
     font-family: 'Montserrat', sans-serif;
     font-weight: 900;
     // font-size: clamp(50px, 11vw, 120px);
-  
+    
+    .active {
+      color: $color-grey;
+    }
+
     ul {
       display: flex;
       justify-content: center;
@@ -87,9 +106,51 @@ html.lenis {
           &:hover {
             transition-duration: 1s;
             color: $color-grey;
+            cursor: pointer;
           }
         }
       }
+    }
+  }
+
+  .copyright {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 80%;
+    margin: 5vh 10vw 3vh 10vw;
+  
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    
+    color: $color-white;
+
+    .desktop {
+      display: inline;
+    }
+    .mobile {
+      display: none;
+    }
+  
+    @media (max-width: 780px) {
+      .desktop {
+        display: none;
+      }
+      .mobile {
+        display: inline;
+      }
+    }
+    @media (max-width: 580px) {
+      margin: 5vh 8vw 0 8vw;
+    }
+  
+    .line {
+      height: 1px;
+      width: 28vw;
+      background-color: #FFFFFF;
     }
   }
   
@@ -105,14 +166,9 @@ html.lenis {
     .title {
       margin-left: 10vw;
       color: $color-white;
-      h1 {
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 900;
-        font-size: clamp(50px, 11vw, 120px);
         
-        span {
-          display: block;
-        }
+      span {
+        display: block;
       }
     }
   
@@ -130,9 +186,9 @@ html.lenis {
   }
   
   .fade-hero-section {
-    height: 120vh;
+    height: 100vh;
     width: 100vw;
-    background-color: $color-orange;
+    //background-color: $color-orange;
     display: flex;
     align-items: center;
   
@@ -140,25 +196,20 @@ html.lenis {
       margin-left: 10vw;
       margin-top: 15vh;
       color: $color-white;
-      h3 {
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 900;
-        font-size: clamp(50px, 11vw, 120px);;
   
-        span {
-          display: block;
-        }
+      span {
+        display: block;
       }
     }
   }
   
   .about-section {
-    background-color: $color-lightBlue;
+    //background-color: $color-lightBlue;
     width: 100vw;
     color: $color-aquaGreen;
     
-    .first {
-      height: 120vh;
+    .phrase {
+      height: 100vh;
       width: 100vw;
       display: flex;
       align-items: center;
@@ -166,19 +217,14 @@ html.lenis {
       .title {
         margin-left: 10vw;
         margin-top: 15vh;
-        h3 {
-          font-family: 'Montserrat', sans-serif;
-          font-weight: 900;
-          font-size: clamp(50px, 11vw, 120px);
     
-          span {
-            display: block;
-          }
+        span {
+          display: block;
         }
       }
     }
-    .second {
-      height: 120vh;
+    .team {
+      height: 100vh;
       width: 100vw;
       display: flex;
       justify-content: center;
@@ -197,22 +243,16 @@ html.lenis {
         }
   
         .about-team {
-          p {
-            font-family: 'Montserrat', sans-serif;
-            font-weight: 900;
-            font-size: clamp(50px, 11vw, 120px);;
-  
-            @media (max-width: 480px) {
-              font-size: clamp(60px, 12vw, 140px);
-            }
-            
-            span {
-              display: block;
-            }
+          @media (max-width: 480px) {
+            font-size: clamp(60px, 12vw, 140px);
+          }
+          
+          span {
+            display: block;
           }
         }
         .team-description {
-          width: 40%;
+          width: 45%;
           margin-bottom: 6vw;
   
           @media (max-width: 980px) {
@@ -220,7 +260,10 @@ html.lenis {
           }
   
           p {
-            font-size: clamp(10px, 3vw, 35px);
+            font-family: "komet", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+            font-size: clamp(9px, 3vw, 32px);
   
             @media (max-width: 980px) {
               font-size: clamp(15px, 4vw, 47px);
@@ -232,45 +275,180 @@ html.lenis {
         }
       }
     }
-    .third {
-      height: 120vh;
+    .members {
+      height: 100vh;
+      width: fit-content;
       display: flex;
+      flex-direction: row;
       align-items: center;
-  
-      /* .title {
+      gap: 10rem;
+
+      .kristi {
+        // height: 38rem;
+        // width: 70rem;
+        height: 65vh;
+        width: 60vw;
+        border-radius: 25% 25% 25% 25% / 50% 50% 50% 50%;
+        overflow: hidden;
         margin-left: 10vw;
-        margin-top: 15vh;
-        h3 {
-          font-family: 'Montserrat', sans-serif;
-          font-weight: 900;
-          font-size: clamp(50px, 11vw, 120px);;
-    
-          span {
-            display: block;
+        position: relative;
+
+        @media (max-width: 1280px) {
+          height: 50vh;
+          width: 68vw;
+        }
+        @media (max-width: 980px) {
+          height: 42vh;
+        }
+        @media (max-width: 780px) {
+          height: 52vh;
+          width: 82vw;
+        }
+        @media (max-width: 580px) {
+          height: 78vh;
+        }
+
+        .bg {
+          display: flex;
+          justify-content: center;
+          mix-blend-mode: multiply;
+          opacity: .6;
+          // background: #d3d3d3;
+          background: #0E7A86;
+        }
+        
+        .about {
+          position: absolute;
+          top: 50%;
+          left: 15%;
+          font-family: "komet", sans-serif;
+          font-style: normal;
+
+          @media (max-width: 1280px) {
+            top: 40%;
+            left: 20%;
+          }
+          @media (max-width: 980px) {
+            top: 30%;
+          }
+          @media (max-width: 580px) {
+            top: 30%;
+            left: 25%;
+          }
+          
+          .name {
+            font-weight: 900;
+            font-size: clamp(20px, 11vw, 120px);
+
+            p {
+              margin: 0;
+            }
+          }
+          .description {
+            font-weight: 400;
+            width: 60%;
+
+            @media (max-width: 580px) {
+              width: 80%;
+            }
           }
         }
-      } */
+      }
+      .phil {
+        // height: 38rem;
+        // width: 70rem;
+        height: 65vh;
+        width: 60vw;
+        border-radius: 25% 25% 25% 25% / 50% 50% 50% 50%;
+        overflow: hidden;
+        position: relative;
+
+        @media (max-width: 1280px) {
+          height: 50vh;
+          width: 68vw;
+        }
+        @media (max-width: 980px) {
+          height: 42vh;
+        }
+        @media (max-width: 780px) {
+          height: 52vh;
+          width: 82vw;
+        }
+        @media (max-width: 580px) {
+          height: 78vh;
+        }
+
+        .bg {
+          display: flex;
+          justify-content: center;
+          mix-blend-mode: multiply;
+          opacity: .6;
+          // background: lightgray;
+          background: #0E7A86;
+        }
+        
+        .about {
+          position: absolute;
+          top: 50%;
+          left: 15%;
+          font-family: "komet", sans-serif;
+          font-style: normal;
+
+          @media (max-width: 1280px) {
+            top: 40%;
+            left: 20%;
+          }
+          @media (max-width: 980px) {
+            top: 30%;
+          }
+          @media (max-width: 580px) {
+            top: 30%;
+            left: 25%;
+          }
+          
+          .name {
+            font-weight: 900;
+            font-size: clamp(20px, 11vw, 120px);
+
+            p {
+              margin: 0;
+            }
+          }
+          .description {
+            font-weight: 400;
+            width: 60%;
+
+            @media (max-width: 580px) {
+              width: 80%;
+            }
+          }
+        }
+      }
     }
   }
   
   .how-we-work {
-    background-color: $color-darkBlue;
-    width: 100vw;
+    //background-color: $color-darkBlue;
+    width: fit-content;
   
     .our-way-wrapper {
-      height: 120vh;
-      width: 100vw;
+      height: 100vh;
       display: flex;
       justify-content: center;
+      align-items: center;
+      gap: 10vw;
+      overflow-x: hidden;
+
   
-      .our-way {
-        width: 80%;
-        margin-bottom: 4vw;
+      .main-slide {
+        width: 80vw;
+        margin: 4vh 0 4vh 10vw;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: end;
-  
+        gap: 1rem;
+
         @media (max-width: 980px) {
           flex-direction: column;
           justify-content: center;
@@ -278,12 +456,16 @@ html.lenis {
         }
   
         .about-phrase {
-          p {
+          margin-top: 5vh;
+          h3 {
             color: $color-orange;
-            font-family: 'Montserrat', sans-serif;
-            font-weight: 900;
-            font-size: clamp(50px, 11vw, 120px);
-  
+
+            @media (max-width: 1200px) {
+              font-size: clamp(45px, 9vw, 110px);
+            }
+            @media (max-width: 980px) {
+              font-size: clamp(50px, 11vw, 120px);
+            }
             @media (max-width: 480px) {
               font-size: clamp(60px, 12vw, 140px);
             }
@@ -295,7 +477,7 @@ html.lenis {
         }
         .about-agency {
           color: $color-grey;
-          width: 40%;
+          width: 45%;
           margin-bottom: 6vw;
   
           @media (max-width: 980px) {
@@ -303,6 +485,9 @@ html.lenis {
           }
   
           p {
+            font-family: "komet", sans-serif;
+            font-weight: 400;
+            font-style: normal;
             font-size: clamp(10px, 3vw, 35px);
   
             @media (max-width: 980px) {
@@ -314,10 +499,94 @@ html.lenis {
           }
         }
       }
+      .secondary-slides {
+        width: 90vw;
+        margin: 4vh 0 4vh 12vw;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: end;
+        gap: 1rem;
+
+        @media (max-width: 980px) {
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+        }
+  
+        .about-phrase {
+          margin-top: 5vh;
+          h3 {
+            color: $color-orange;
+            
+            font-size: clamp(80px, 16vw, 160px);
+
+            @media (max-width: 1480px) {
+              font-size: clamp(45px, 9vw, 110px);
+            }
+            @media (max-width: 1200px) {
+              font-size: clamp(45px, 9vw, 110px);
+            }
+            @media (max-width: 980px) {
+              font-size: clamp(50px, 11vw, 120px);
+            }
+            @media (max-width: 480px) {
+              font-size: clamp(60px, 12vw, 140px);
+            }
+            
+            span {
+              display: block;
+            }
+          }
+        }
+        .about-agency {
+          position: absolute;
+          color: $color-grey;
+          left: 42vw;
+          width: 34vw;
+          margin-bottom: 8vw;
+
+          @media (max-width: 1480px) {
+            top: 46vh;
+            left: 44vw;
+          }
+          @media (max-width: 980px) {
+            left: 58vw;
+            width: 30%;
+          }
+          @media (max-width: 780px) {
+            position: relative;
+            top: 0;
+            left: 0;
+            width: 80%;
+            margin-top: -5vh;
+          }
+          @media (max-width: 780px) {
+            width: 100%;
+          }
+  
+          p {
+            font-family: "komet", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+            font-size: clamp(8px, 3vw, 28px);
+  
+            @media (max-width: 980px) {
+              font-size: clamp(6px, 2vw, 20px);
+            }
+            @media (max-width: 780px) {
+              font-size: clamp(12px, 4vw, 40px);
+            }
+            @media (max-width: 480px) {
+              font-size: clamp(20px, 6vw, 70px);
+            }
+          }
+        }
+      }
     }
   
     .principles-slider-wrapper {
-      height: 120vh;
+      height: 100vh;
       width: 100vw;
       display: flex;
       justify-content: center;
@@ -325,34 +594,53 @@ html.lenis {
   
     .work-wrapper {
       width: 100vw;
-  
+
       .section-title {
-        height: 120vh;
+        height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
   
         p {
           color: $color-orange;
-          font-family: 'Montserrat', sans-serif;
+          font-family: "komet", sans-serif;
           font-weight: 900;
+          font-style: normal;
           font-size: clamp(100px, 24vw, 220px);
         }
       }
   
       .projects-section {
-        height: 120vh;
+        margin-top: 20vh;
+        height: fit-content;
         display: flex;
-        justify-content: center;
-        align-items: center;
+        flex-direction: column;
+        gap: 30vh;
+
+        div {
+          border-radius: 12% 12% 12% 12% / 15% 15% 15% 15%;
+          height: 75vh;
+          width: 60vw;
+          margin-left: 10vw;
+
+          background: url("/hero-bg.jpg");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+
+          &:nth-child(even) {
+            margin-left: 29vw;
+          }
+          &:nth-child(odd) {
+            margin-left: 10vw;
+          }
+        }
       }
-  
-  
     }
   }
   
   .contact {
-    background-color: $color-mustard;
+    //background-color: $color-mustard;
     width: 100vw;
   
     .title {
@@ -362,21 +650,18 @@ html.lenis {
       margin-left: 10vw;
       color: $color-orange;
   
-      p {
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 900;
+      h3 {
         font-size: clamp(50px, 11vw, 120px);;
-        margin-top: 8vw;
+        margin-top: 12vw;
         
         span {
           display: block;
         }
       }
-  
     }
   
     .contact-wrapper {
-      height: 100vh;
+      height: 120vh;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -398,8 +683,9 @@ html.lenis {
   
         .contact-phrase {
           p {
-            font-family: 'Montserrat', sans-serif;
+            font-family: "komet", sans-serif;
             font-weight: 900;
+            font-style: normal;
             font-size: clamp(30px, 12vw, 80px);
   
             @media (max-width: 800px) {
@@ -417,6 +703,9 @@ html.lenis {
         .contact-links {
           width: 40%;
           margin-bottom: 6vw;
+          font-family: "komet", sans-serif;
+          font-weight: 400;
+          font-style: normal;
   
           @media (max-width: 800px) {
             width: 80%;
@@ -487,32 +776,6 @@ html.lenis {
         width: 600vw;
         z-index: 1;
       }
-    }
-  }
-  
-  .footer {
-    position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 80%;
-    margin: 5vh 10vw 3vh 10vw;
-  
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    
-    color: $color-white;
-  
-    @media (max-width: 580px) {
-      margin: 5vh 8vw 0 8vw;
-    }
-  
-    .line {
-      height: 1px;
-      width: 28vw;
-      background-color: #FFFFFF;
     }
   }
 }
