fix: hero bg image

--- a/style.scss
+++ b/style.scss
@@ -157,7 +157,7 @@ html.lenis {
   .hero {
     height: 100vh;
     width: 100vw;
-    background: url("hero-bg.jpg");
+    background: url("/hero-bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
