--- a/style.scss
+++ b/style.scss
@@ -1,13 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800;900&display=swap');
 
-$color-orange: #EE512F;
-$color-lightBlue: #108896;
-$color-aquaGreen: #C5ECD8;
-$color-darkBlue: #1C374D;
-$color-mustard: #FCA720;
-$color-darkMustard: #E69C24;
-$color-white: #FFFFFF;
-$color-grey: #93A0AA;
+@import "./scss/colors";
+@import "./scss/lenis";
+@import "./scss/cursor";
+@import "./scss/main";
+@import "./scss/menu";
+@import "./scss/copyright";
+@import "./scss/header";
+@import "./scss/hero";
+@import "./scss/fade-hero";
+@import "./scss/about";
+@import "./scss/how-we-work";
+@import "./scss/footer";
 
 html,
 body {
@@ -17,769 +21,3 @@ body {
   -moz-osx-font-smoothing: grayscale;
   //cursor: none;
 }
-
-html.lenis {
-  height: auto;
-}
-
-.lenis.lenis-smooth {
-  scroll-behavior: auto;
-}
-
-.lenis.lenis-smooth [data-lenis-prevent] {
-  overscroll-behavior: contain;
-}
-
-.lenis.lenis-stopped {
-  overflow: hidden;
-}
-
-.lenis.lenis-scrolling iframe {
-  pointer-events: none;
-}
-
-.main {
-  background-color: $color-orange;
-
-  h1,h3 {
-    font-family: "komet", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-    font-size: clamp(50px, 11vw, 120px);
-  }
-
-  a {
-    font-family: "komet", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-  }
-
-  .header {
-    position: fixed;
-    width: 80%;
-    margin: 5vh 10vw 0 10vw;
-  
-    @media (max-width: 580px) {
-      margin: 5vh 8vw 0 8vw;
-    }
-  
-    img {
-      @media (max-width: 580px) {
-        transform: scale(.8);
-      }
-    }
-    
-  }
-
-  .menu {
-    position: fixed;
-    left: -5%;
-    right: 0;
-    bottom: 50%;
-    width: 200vw;
-    color: #FFFFFF;
-    font-weight: 900;
-    transform: rotate(-90deg);
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
-    // font-size: clamp(50px, 11vw, 120px);
-    
-    .active {
-      color: $color-grey;
-    }
-
-    ul {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 0;
-  
-      li {
-        list-style-type: none;
-        a {
-          color: #FFFFFF;
-          text-decoration: none;
-          letter-spacing: .2rem;
-          padding: 1rem;
-          transition-duration: 1s;
-  
-          &:hover {
-            transition-duration: 1s;
-            color: $color-grey;
-            cursor: pointer;
-          }
-        }
-      }
-    }
-  }
-
-  .copyright {
-    position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 80%;
-    margin: 5vh 10vw 3vh 10vw;
-  
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    
-    color: $color-white;
-
-    .desktop {
-      display: inline;
-    }
-    .mobile {
-      display: none;
-    }
-  
-    @media (max-width: 780px) {
-      .desktop {
-        display: none;
-      }
-      .mobile {
-        display: inline;
-      }
-    }
-    @media (max-width: 580px) {
-      margin: 5vh 8vw 0 8vw;
-    }
-  
-    .line {
-      height: 1px;
-      width: 28vw;
-      background-color: #FFFFFF;
-    }
-  }
-  
-  .hero {
-    height: 100vh;
-    width: 100vw;
-    background: url("/hero-bg.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-  
-    .title {
-      margin-left: 10vw;
-      color: $color-white;
-        
-      span {
-        display: block;
-      }
-    }
-  
-    .brand-name-transition {
-      position: absolute;
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 900;
-      top: -30vh;
-      left: -16%;
-      font-size: clamp(400px, 88vw, 800px);
-      color: $color-orange;
-      width: 300vw;
-      overflow-x: hidden;
-    }
-  }
-  
-  .fade-hero-section {
-    height: 100vh;
-    width: 100vw;
-    //background-color: $color-orange;
-    display: flex;
-    align-items: center;
-  
-    .title {
-      margin-left: 10vw;
-      margin-top: 15vh;
-      color: $color-white;
-  
-      span {
-        display: block;
-      }
-    }
-  }
-  
-  .about-section {
-    //background-color: $color-lightBlue;
-    width: 100vw;
-    color: $color-aquaGreen;
-    
-    .phrase {
-      height: 100vh;
-      width: 100vw;
-      display: flex;
-      align-items: center;
-  
-      .title {
-        margin-left: 10vw;
-        margin-top: 15vh;
-    
-        span {
-          display: block;
-        }
-      }
-    }
-    .team {
-      height: 100vh;
-      width: 100vw;
-      display: flex;
-      justify-content: center;
-  
-      .title {
-        width: 80%;
-        margin-bottom: 4vw;
-        display: flex;
-        justify-content: space-between;
-        align-items: end;
-  
-        @media (max-width: 980px) {
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-        }
-  
-        .about-team {
-          @media (max-width: 480px) {
-            font-size: clamp(60px, 12vw, 140px);
-          }
-          
-          span {
-            display: block;
-          }
-        }
-        .team-description {
-          width: 45%;
-          margin-bottom: 6vw;
-  
-          @media (max-width: 980px) {
-            width: 100%;
-          }
-  
-          p {
-            font-family: "komet", sans-serif;
-            font-weight: 400;
-            font-style: normal;
-            font-size: clamp(9px, 3vw, 32px);
-  
-            @media (max-width: 980px) {
-              font-size: clamp(15px, 4vw, 47px);
-            }
-            @media (max-width: 480px) {
-              font-size: clamp(20px, 6vw, 70px);
-            }
-          }
-        }
-      }
-    }
-    .members {
-      height: 100vh;
-      width: fit-content;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      gap: 10rem;
-
-      .kristi {
-        // height: 38rem;
-        // width: 70rem;
-        height: 65vh;
-        width: 60vw;
-        border-radius: 25% 25% 25% 25% / 50% 50% 50% 50%;
-        overflow: hidden;
-        margin-left: 10vw;
-        position: relative;
-
-        @media (max-width: 1280px) {
-          height: 50vh;
-          width: 68vw;
-        }
-        @media (max-width: 980px) {
-          height: 42vh;
-        }
-        @media (max-width: 780px) {
-          height: 52vh;
-          width: 82vw;
-        }
-        @media (max-width: 580px) {
-          height: 78vh;
-        }
-
-        .bg {
-          display: flex;
-          justify-content: center;
-          mix-blend-mode: multiply;
-          opacity: .6;
-          // background: #d3d3d3;
-          background: #0E7A86;
-        }
-        
-        .about {
-          position: absolute;
-          top: 50%;
-          left: 15%;
-          font-family: "komet", sans-serif;
-          font-style: normal;
-
-          @media (max-width: 1280px) {
-            top: 40%;
-            left: 20%;
-          }
-          @media (max-width: 980px) {
-            top: 30%;
-          }
-          @media (max-width: 580px) {
-            top: 30%;
-            left: 25%;
-          }
-          
-          .name {
-            font-weight: 900;
-            font-size: clamp(20px, 11vw, 120px);
-
-            p {
-              margin: 0;
-            }
-          }
-          .description {
-            font-weight: 400;
-            width: 60%;
-
-            @media (max-width: 580px) {
-              width: 80%;
-            }
-          }
-        }
-      }
-      .phil {
-        // height: 38rem;
-        // width: 70rem;
-        height: 65vh;
-        width: 60vw;
-        border-radius: 25% 25% 25% 25% / 50% 50% 50% 50%;
-        overflow: hidden;
-        position: relative;
-
-        @media (max-width: 1280px) {
-          height: 50vh;
-          width: 68vw;
-        }
-        @media (max-width: 980px) {
-          height: 42vh;
-        }
-        @media (max-width: 780px) {
-          height: 52vh;
-          width: 82vw;
-        }
-        @media (max-width: 580px) {
-          height: 78vh;
-        }
-
-        .bg {
-          display: flex;
-          justify-content: center;
-          mix-blend-mode: multiply;
-          opacity: .6;
-          // background: lightgray;
-          background: #0E7A86;
-        }
-        
-        .about {
-          position: absolute;
-          top: 50%;
-          left: 15%;
-          font-family: "komet", sans-serif;
-          font-style: normal;
-
-          @media (max-width: 1280px) {
-            top: 40%;
-            left: 20%;
-          }
-          @media (max-width: 980px) {
-            top: 30%;
-          }
-          @media (max-width: 580px) {
-            top: 30%;
-            left: 25%;
-          }
-          
-          .name {
-            font-weight: 900;
-            font-size: clamp(20px, 11vw, 120px);
-
-            p {
-              margin: 0;
-            }
-          }
-          .description {
-            font-weight: 400;
-            width: 60%;
-
-            @media (max-width: 580px) {
-              width: 80%;
-            }
-          }
-        }
-      }
-    }
-  }
-  
-  .how-we-work {
-    //background-color: $color-darkBlue;
-    width: fit-content;
-  
-    .our-way-wrapper {
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 10vw;
-      overflow-x: hidden;
-
-  
-      .main-slide {
-        width: 80vw;
-        margin: 4vh 0 4vh 10vw;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: end;
-        gap: 1rem;
-
-        @media (max-width: 980px) {
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-        }
-  
-        .about-phrase {
-          margin-top: 5vh;
-          h3 {
-            color: $color-orange;
-
-            @media (max-width: 1200px) {
-              font-size: clamp(45px, 9vw, 110px);
-            }
-            @media (max-width: 980px) {
-              font-size: clamp(50px, 11vw, 120px);
-            }
-            @media (max-width: 480px) {
-              font-size: clamp(60px, 12vw, 140px);
-            }
-            
-            span {
-              display: block;
-            }
-          }
-        }
-        .about-agency {
-          color: $color-grey;
-          width: 45%;
-          margin-bottom: 6vw;
-  
-          @media (max-width: 980px) {
-            width: 100%;
-          }
-  
-          p {
-            font-family: "komet", sans-serif;
-            font-weight: 400;
-            font-style: normal;
-            font-size: clamp(10px, 3vw, 35px);
-  
-            @media (max-width: 980px) {
-              font-size: clamp(15px, 4vw, 47px);
-            }
-            @media (max-width: 480px) {
-              font-size: clamp(20px, 6vw, 70px);
-            }
-          }
-        }
-      }
-      .secondary-slides {
-        width: 90vw;
-        margin: 4vh 0 4vh 12vw;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: end;
-        gap: 1rem;
-
-        @media (max-width: 980px) {
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-        }
-  
-        .about-phrase {
-          margin-top: 5vh;
-          h3 {
-            color: $color-orange;
-            
-            font-size: clamp(80px, 16vw, 160px);
-
-            @media (max-width: 1480px) {
-              font-size: clamp(45px, 9vw, 110px);
-            }
-            @media (max-width: 1200px) {
-              font-size: clamp(45px, 9vw, 110px);
-            }
-            @media (max-width: 980px) {
-              font-size: clamp(50px, 11vw, 120px);
-            }
-            @media (max-width: 480px) {
-              font-size: clamp(60px, 12vw, 140px);
-            }
-            
-            span {
-              display: block;
-            }
-          }
-        }
-        .about-agency {
-          position: absolute;
-          color: $color-grey;
-          left: 42vw;
-          width: 34vw;
-          margin-bottom: 8vw;
-
-          @media (max-width: 1480px) {
-            top: 46vh;
-            left: 44vw;
-          }
-          @media (max-width: 980px) {
-            left: 58vw;
-            width: 30%;
-          }
-          @media (max-width: 780px) {
-            position: relative;
-            top: 0;
-            left: 0;
-            width: 80%;
-            margin-top: -5vh;
-          }
-          @media (max-width: 780px) {
-            width: 100%;
-          }
-  
-          p {
-            font-family: "komet", sans-serif;
-            font-weight: 400;
-            font-style: normal;
-            font-size: clamp(8px, 3vw, 28px);
-  
-            @media (max-width: 980px) {
-              font-size: clamp(6px, 2vw, 20px);
-            }
-            @media (max-width: 780px) {
-              font-size: clamp(12px, 4vw, 40px);
-            }
-            @media (max-width: 480px) {
-              font-size: clamp(20px, 6vw, 70px);
-            }
-          }
-        }
-      }
-    }
-  
-    .principles-slider-wrapper {
-      height: 100vh;
-      width: 100vw;
-      display: flex;
-      justify-content: center;
-    }
-  
-    .work-wrapper {
-      width: 100vw;
-
-      .section-title {
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-  
-        p {
-          color: $color-orange;
-          font-family: "komet", sans-serif;
-          font-weight: 900;
-          font-style: normal;
-          font-size: clamp(100px, 24vw, 220px);
-        }
-      }
-  
-      .projects-section {
-        margin-top: 20vh;
-        height: fit-content;
-        display: flex;
-        flex-direction: column;
-        gap: 30vh;
-
-        div {
-          border-radius: 12% 12% 12% 12% / 15% 15% 15% 15%;
-          height: 75vh;
-          width: 60vw;
-          margin-left: 10vw;
-
-          background: url("/hero-bg.jpg");
-          background-position: center;
-          background-repeat: no-repeat;
-          background-size: cover;
-
-          &:nth-child(even) {
-            margin-left: 29vw;
-          }
-          &:nth-child(odd) {
-            margin-left: 10vw;
-          }
-        }
-      }
-    }
-  }
-  
-  .contact {
-    //background-color: $color-mustard;
-    width: 100vw;
-  
-    .title {
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      margin-left: 10vw;
-      color: $color-orange;
-  
-      h3 {
-        font-size: clamp(50px, 11vw, 120px);;
-        margin-top: 12vw;
-        
-        span {
-          display: block;
-        }
-      }
-    }
-  
-    .contact-wrapper {
-      height: 120vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-  
-      .contact-info {
-        width: 80%;
-        color: $color-darkBlue;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: last baseline;
-        z-index: 10;
-  
-        @media (max-width: 980px) {
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-        }
-  
-        .contact-phrase {
-          p {
-            font-family: "komet", sans-serif;
-            font-weight: 900;
-            font-style: normal;
-            font-size: clamp(30px, 12vw, 80px);
-  
-            @media (max-width: 800px) {
-              font-size: clamp(40px, 14vw, 90px);
-            }
-            @media (max-width: 480px) {
-              font-size: clamp(50px, 16vw, 100px);
-            }
-            
-            span {
-              display: block;
-            }
-          }
-        }
-        .contact-links {
-          width: 40%;
-          margin-bottom: 6vw;
-          font-family: "komet", sans-serif;
-          font-weight: 400;
-          font-style: normal;
-  
-          @media (max-width: 800px) {
-            width: 80%;
-          }
-  
-          p {
-            font-size: clamp(8px, 2vw, 25px);
-  
-            @media (max-width: 800px) {
-              font-size: clamp(16px, 4vw, 50px);
-            }
-            @media (max-width: 800px) {
-              font-size: clamp(22px, 5vw, 60px);
-            }
-  
-            span {
-              display: block;
-            }
-          }
-  
-          .socials {
-            width: 60%;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: space-between;
-  
-            @media (max-width: 1480px) {
-              width: 80%;
-            }
-            @media (max-width: 1128px) {
-              width: 100%;
-            }
-  
-            a {
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              width: 5rem;
-              height: 5rem;
-              border-radius: 50%;
-              border: 1px solid $color-darkMustard;
-              transition-duration: 1s;
-  
-              @media (max-width: 480px) {
-                width: 4rem;
-                height: 4rem;
-              }
-  
-              &:hover {
-                cursor: pointer;
-                background-color: $color-white;
-                transition-duration: 1s;
-              }
-            }
-            
-          }
-        }
-      }
-      .brand-name-transition {
-        position: absolute;
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 900;
-        bottom: -1250%;
-        left: -135%;
-        font-size: clamp(200px, 66vw, 600px);
-        color: $color-orange;
-        width: 600vw;
-        z-index: 1;
-      }
-    }
-  }
-}
-
-
-
-
