--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -6,6 +6,7 @@
   background-size: cover;
   display: flex;
   align-items: center;
+  overflow: hidden;
 
   .title {
     margin-left: 10vw;
@@ -17,14 +18,19 @@
   }
 
   .brand-name-transition {
-    position: absolute;
-    font-family: 'Montserrat', sans-serif;
+    position: relative;
+    font-family: "komet", sans-serif;
     font-weight: 900;
-    top: -30vh;
-    left: -16%;
+    font-style: normal;
+    margin-top: 98vh;
+    left: -50vw;
     font-size: clamp(400px, 88vw, 800px);
-    color: $color-orange;
-    width: 300vw;
-    overflow-x: hidden;
+    // color: $color-orange;
+    color: red;
+
+    p {
+      display: inline-block;
+      width: 120vw;
+    }
   }
 }
