--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -29,7 +29,12 @@
       margin-bottom: 4vw;
       display: flex;
       justify-content: space-between;
+      align-items: flex-end;
       align-items: end;
+
+      @media (max-width: 580px) {
+        width: 85%;
+      }
 
       @media (max-width: 980px) {
         flex-direction: column;
@@ -38,6 +43,9 @@
       }
 
       .about-team {
+
+        width: 85vw;
+
         @media (max-width: 480px) {
           font-size: clamp(60px, 12vw, 140px);
         }
