--- a/scss/_copyright.scss
+++ b/scss/_copyright.scss
@@ -5,12 +5,16 @@
   bottom: 0;
   width: 80%;
   margin: 5vh 10vw 3vh 10vw;
+  z-index: 1000;
+
+  font-family: "komet", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  
   color: $color-white;
 
   .desktop {
