--- a/scss/_how-we-work.scss
+++ b/scss/_how-we-work.scss
@@ -77,7 +77,7 @@
       flex-direction: row;
       justify-content: space-between;
       align-items: end;
-      gap: 1rem;
+      gap: 2rem;
 
       @media (max-width: 980px) {
         flex-direction: column;
@@ -165,6 +165,10 @@
 
   .work-wrapper {
     width: 100vw;
+    color: $color-orange;
+    font-family: "komet", sans-serif;
+    font-weight: 900;
+    font-style: normal;
 
     .section-title {
       height: 100vh;
@@ -173,37 +177,87 @@
       align-items: center;
 
       p {
-        color: $color-orange;
-        font-family: "komet", sans-serif;
-        font-weight: 900;
-        font-style: normal;
         font-size: clamp(100px, 24vw, 220px);
       }
     }
 
     .projects-section {
-      margin-top: 20vh;
-      height: fit-content;
       display: flex;
       flex-direction: column;
-      gap: 30vh;
+      height: 500vh;
 
-      div {
-        border-radius: 12% 12% 12% 12% / 15% 15% 15% 15%;
-        height: 75vh;
-        width: 60vw;
-        margin-left: 10vw;
+      .work-container {
+        height: 100vh;
+        display: flex;
+        align-items: center;
 
-        background: url("/hero-bg.jpg");
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-
+        &:nth-child(odd) {
+          margin-left: 10vw;
+        }
         &:nth-child(even) {
           margin-left: 29vw;
         }
-        &:nth-child(odd) {
-          margin-left: 10vw;
+
+        .work-item {
+          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          height: 70vh;
+          width: 60vw;
+  
+          background: url("/hero-bg.jpg");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+  
+          &:hover {
+            cursor: pointer;
+          }
+
+          .name {
+            margin-top: 10rem;
+            p {
+              margin-top: 62vh;
+              margin-left: 2vw;
+              color: $color-white;
+              font-size: clamp(20px, 5vw, 45px);
+            }
+          }
+        }
+
+        .modal {
+          position: absolute;
+          height: fit-content;
+          width: fit-content;
+          background-color: yellow;
+          transform: translateX(-20vw);
+
+          .swiper-wrapper {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            height: 70vh;
+            width: 100vw;
+
+            gap: 30vw;
+
+            .work-slide-item {
+              border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+              height: 70vh;
+              width: 60vw;
+
+              background: url("/hero-bg.jpg");
+              background-position: center;
+              background-repeat: no-repeat;
+              background-size: cover;
+
+              &:hover {
+                cursor: pointer;
+              }
+            }
+          }
+        }
+
+        .hidden {
+          display: none;
         }
       }
     }
