--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,41 +1,131 @@
 .menu {
-  position: fixed;
-  left: -5%;
-  right: 0;
-  bottom: 50%;
-  width: 200vw;
-  color: #FFFFFF;
-  font-weight: 900;
-  transform: rotate(-90deg);
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 900;
-  // font-size: clamp(50px, 11vw, 120px);
+  .desktop {
+    position: fixed;
+    left: -5%;
+    right: 0;
+    bottom: 50%;
+    width: 200vw;
+    color: #FFFFFF;
+    font-weight: 900;
+    transform: rotate(-90deg);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    // font-size: clamp(50px, 11vw, 120px);
+    z-index: 999;
+
+    @media (max-width: 780px) {
+      display: none;
+    }
   
-  .active {
-    color: $color-grey;
-  }
-
-  ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-
-    li {
-      list-style-type: none;
-      a {
-        color: #FFFFFF;
-        text-decoration: none;
-        letter-spacing: .2rem;
-        padding: 1rem;
-        transition-duration: 1s;
-
-        &:hover {
+    ul {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0;
+  
+      li {
+        list-style-type: none;
+        a {
+          color: #FFFFFF;
+          text-decoration: none;
+          letter-spacing: .2rem;
+          padding: 1rem;
           transition-duration: 1s;
-          color: $color-grey;
-          cursor: pointer;
+  
+          &:hover {
+            transition-duration: 1s;
+            color: $color-grey;
+            cursor: pointer;
+          }
         }
       }
     }
+  }
+
+  .mobile {
+    position: fixed;
+    background-color: $color-orange;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 5vw;
+    z-index: 999;
+
+    @media (min-width: 780px) {
+      display: none;
+    }
+
+    .nav {
+      ul {
+        display: flex;
+        flex-direction: column;
+        margin-top: 30vh;
+        gap: 4vh;
+
+        li {
+          list-style-type: none;
+          a {
+            color: #FFFFFF;
+            text-decoration: none;
+            letter-spacing: .2rem;
+            padding: 1rem;
+            transition-duration: 1s;
+            font-size: clamp(24px, 7vw, 55px);
+  
+            &:hover {
+              transition-duration: 1s;
+              color: $color-grey;
+              cursor: pointer;
+            }
+          }
+        }
+      }
+    }
+
+    .contact {
+      width: 80%;
+      margin-left: 10vw;
+      color: $color-white;
+      font-family: "komet", sans-serif;
+      font-weight: 400;
+      font-style: normal;
+    }
+
+    .socials {
+      width: 80%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      margin-left: 10vw;
+
+      a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 5rem;
+        height: 5rem;
+        border-radius: 50%;
+        border: 1px solid $color-white;
+        transition-duration: 1s;
+
+        @media (max-width: 480px) {
+          width: 4rem;
+          height: 4rem;
+        }
+
+        &:hover {
+          cursor: pointer;
+          background-color: $color-white;
+          transition-duration: 1s;
+        }
+      }
+    }
+  }
+
+  .hidden {
+    display: none;
   }
 }
