--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
   height: 100vh;
   width: 100vw;
-  background: url("/hero-bg.jpg");
+  background: url("/dance.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
