fix center slider

--- a/scss/_how-we-work.scss
+++ b/scss/_how-we-work.scss
@@ -346,7 +346,7 @@
         align-items: center;
         height: 100vh;
         width: 100vw;
-        //margin-left: 10vw;
+        margin-left: -10vw;
 
         gap: 30vw;
 
