--- a/scss/_cursor.scss
+++ b/scss/_cursor.scss
@@ -24,6 +24,7 @@
       transform:scale(0.2);
 
       background:currentColor;
+      // background-image: url("/Aste.png");
       border-radius:50%;
 
       transition:transform 0.25s ease-in-out, opacity 0.1s;
