--- a/scss/_fade-hero.scss
+++ b/scss/_fade-hero.scss
@@ -1,17 +1,117 @@
 .fade-hero-section {
-  height: 100vh;
-  width: 100vw;
-  //background-color: $color-orange;
-  display: flex;
-  align-items: center;
 
-  .title {
-    margin-left: 10vw;
-    margin-top: 15vh;
+  .phrase {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+
+    .title {
+      margin-left: 10vw;
+      margin-top: 15vh;
+      color: $color-white;
+      width: 80%;
+  
+      h3 {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 900;
+        font-size: clamp(40px, 8vw, 80px);
+        margin-left: 2vw;
+      }
+  
+      span {
+        &:nth-child(1) {
+          margin-left: -2vw;
+          line-height: 0;
+        }
+        &:nth-child(2) {
+          line-height: 1;
+        }
+  
+        display: block;
+      }
+    }
+  }
+  .shortcut {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: $color-white;
 
-    span {
-      display: block;
+    .title {
+      width: 80%;
+      margin-bottom: 4vw;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      @media (max-width: 580px) {
+        width: 85%;
+      }
+
+      @media (max-width: 980px) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .about-shortcut {
+
+        width: 85vw;
+
+        @media (max-width: 480px) {
+          font-size: clamp(60px, 12vw, 140px);
+        }
+        
+        span {
+          display: block;
+        }
+        h3 {
+          font-family: 'Montserrat', sans-serif;
+          font-weight: 900;
+          margin-left: 2vw;
+        }
+    
+        span {
+          &:nth-child(1) {
+            margin-left: -2vw;
+            line-height: 0;
+          }
+          &:nth-child(2) {
+            line-height: 1;
+          }
+    
+          display: block;
+        }
+      }
+      .shortcut-description {
+        width: 45%;
+        margin-bottom: 6vw;
+
+        @media (max-width: 980px) {
+          width: 100%;
+        }
+
+        p {
+          font-family: 'Montserrat', sans-serif;
+          font-weight: 400;
+          font-style: normal;
+          font-size: clamp(9px, 3vw, 32px);
+
+          @media (max-width: 980px) {
+            font-size: clamp(15px, 4vw, 47px);
+          }
+          @media (max-width: 480px) {
+            font-size: clamp(20px, 6vw, 70px);
+          }
+
+          span {
+            display: block;
+          }
+        }
+      }
     }
   }
 }
