--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -13,20 +13,20 @@
     color: $color-white;
     
     p {
-      font-family: "komet", sans-serif;
+      font-family: 'Montserrat', sans-serif;
       font-weight: 900;
-      font-style: normal;
-      font-size: clamp(8px, 8vw, 42px);
+      font-size: clamp(12px, 6vw, 48px);
       margin: 0; 
     }
     h1 {
-      margin-top: -4vh;
-      margin-bottom: -4vh;
+      margin-top: -1vh;
+      margin-bottom: -1vh;
+      line-height: 0.9;
       font-size: clamp(100px, 22vw, 200px);
 
       @media (max-width: 580px) {
-        margin-top: -2vh;
-        margin-bottom: -2vh;
+        margin-top: -1vh;
+        margin-bottom: -1vh;
       }
     }
 
