--- a/scss/_copyright.scss
+++ b/scss/_copyright.scss
@@ -41,4 +41,10 @@
     width: 28vw;
     background-color: #FFFFFF;
   }
+
+  p {
+    font-size: 12px;
+    font-weight: 600;
+    margin: 0;
+  }
 }
