--- a/scss/_fade-hero.scss
+++ b/scss/_fade-hero.scss
@@ -13,10 +13,10 @@
       width: 80%;
   
       h3 {
-        font-family: "komet", sans-serif;
-        font-weight: 900;
-        font-size: clamp(40px, 8vw, 80px);
-        margin-left: 2vw;
+        // font-family: "komet", sans-serif;
+        // font-weight: 900;
+        // font-size: clamp(40px, 8vw, 80px);
+        margin: 0 0 0 1vw;
       }
   
       span {
@@ -43,9 +43,10 @@
     .title {
       width: 80%;
       margin-bottom: 4vw;
+
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: end;
 
       @media (max-width: 580px) {
         width: 85%;
@@ -68,10 +69,9 @@
         span {
           display: block;
         }
-        h3 {
-          font-family: "komet", sans-serif;
-          font-weight: 900;
-          margin-left: 2vw;
+
+        h3 {  
+          margin: 0 0 0 1vw;
         }
     
         span {
@@ -86,26 +86,31 @@
           display: block;
         }
       }
+      
       .shortcut-description {
         width: 45%;
-        margin-bottom: 6vw;
+        // margin-bottom: 6vw;
 
         @media (max-width: 980px) {
           width: 100%;
         }
 
+        // .paragraph
         p {
           font-family: "komet", sans-serif;
           font-weight: 400;
           font-style: normal;
-          font-size: clamp(9px, 3vw, 32px);
+          font-size: clamp(21px, 2.1vw, 25px);
+          line-height: 1.45;
+          letter-spacing: -0.01em;
+          margin: 1.5rem 0 0 0;
 
-          @media (max-width: 980px) {
-            font-size: clamp(15px, 4vw, 47px);
-          }
-          @media (max-width: 480px) {
-            font-size: clamp(20px, 6vw, 70px);
-          }
+          // @media (max-width: 980px) {
+          //   font-size: clamp(15px, 4vw, 47px);
+          // }
+          // @media (max-width: 480px) {
+          //   font-size: clamp(20px, 6vw, 70px);
+          // }
 
           span {
             display: block;
