--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -12,8 +12,7 @@
     margin-left: 10vw;
     color: $color-white;
     
-    p {
-      font-family: 'Montserrat', sans-serif;
+    p { 
       font-weight: 900;
       font-size: clamp(12px, 6vw, 48px);
       margin: 0; 
@@ -36,19 +35,31 @@
   }
 
   .brand-name-transition {
-    position: relative;
-    font-family: "komet", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-    margin-top: 98vh;
-    left: -50vw;
-    font-size: clamp(400px, 88vw, 800px);
-    // color: $color-orange;
-    color: red;
+    position: absolute; z-index: 2;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: end; 
 
     p {
       display: inline-block;
-      width: 120vw;
+      margin: 0;
+ 
+      font-size: clamp(300px, 100vh, 400px);    
+      font-weight: 900;
+      line-height: 1;
+      text-align:right;
+      color: $color-orange; 
+      transform: translateY(55%);
+
+     @media (min-width:480px) {
+      font-size: clamp(400px, 100vh, 900px);       
+     }
     }
   }
 }
