--- a/scss/_how-we-work.scss
+++ b/scss/_how-we-work.scss
@@ -23,53 +23,12 @@
         justify-content: center;
         align-items: start;
       }
+ 
 
-      .about-phrase {
-        margin-top: 5vh;
-        h3 {
-          font-family: "komet", sans-serif;
-          color: $color-orange;
-          margin-left: 2vw;
-
-          @media (max-width: 1200px) {
-            font-size: clamp(45px, 9vw, 110px);
-          }
-          @media (max-width: 980px) {
-            font-size: clamp(50px, 11vw, 120px);
-          }
-          @media (max-width: 480px) {
-            font-size: clamp(60px, 12vw, 140px);
-          }
-      
-          span {
-            &:nth-child(1) {
-              margin-left: -2vw;
-              line-height: 0.2;
-            }
-            &:nth-child(2) {
-              line-height: 1;
-            }
-      
-            display: block;
-          }
-        }
-    
-        span {
-          &:nth-child(1) {
-            margin-left: -2vw;
-            line-height: 0;
-          }
-          &:nth-child(2) {
-            line-height: 1;
-          }
-    
-          display: block;
-        }
-      }
       .about-agency {
         color: $color-grey;
         width: 45%;
-        margin-bottom: 6vw;
+        // margin-bottom: 6vw;
 
         @media (max-width: 980px) {
           width: 100%;
@@ -104,48 +63,15 @@
         justify-content: center;
         align-items: start;
       }
+ 
 
-      .about-phrase {
-        margin-top: 5vh;
-        h3 {
-          margin-left: 1vw;
-          color: $color-orange;
-          
-          font-size: clamp(40px, 16vw, 140px);
-
-          @media (max-width: 1480px) {
-            font-size: clamp(45px, 9vw, 110px);
-          }
-          @media (max-width: 1200px) {
-            font-size: clamp(45px, 9vw, 110px);
-          }
-          @media (max-width: 980px) {
-            font-size: clamp(50px, 11vw, 120px);
-          }
-          @media (max-width: 480px) {
-            font-size: clamp(60px, 12vw, 140px);
-          }
-          
-          span {
-            &:nth-child(1) {
-              font-size: clamp(14px, 8vw, 28px);
-              margin-left: -1vw;
-              line-height: 0.5;
-            }
-            &:nth-child(2) {
-              line-height: 1;
-            }
-      
-            display: block;
-          }
-        }
-      }
       .about-agency {
-        position: absolute;
-        color: $color-grey;
-        left: 50vw;
+        // position: absolute;
+        // color: $color-grey;
+        // left: 50vw;
         width: 40vw;
-        margin-bottom: 8vw;
+        max-width: 480px;
+        // margin-bottom: 8vw;
 
         @media (max-width: 1480px) {
           position: relative;
@@ -158,21 +84,28 @@
           width: 100%;
         }
 
-        p {
-          font-family: "komet", sans-serif;
-          font-weight: 400;
-          font-style: normal;
-          font-size: clamp(8px, 3vw, 28px);
+        p {  
+          font-size: clamp(21px, 2.1vw, 25px);
+          line-height: 1.45;
+          letter-spacing: -0.01em;
+          margin: 1.5rem 0 0 0;
+
+          small {
+            display: block;
+            margin-top: 1rem;
+            font-size: 75%;
+            opacity: .75;
+          }
 
           /* @media (max-width: 980px) {
             font-size: clamp(6px, 2vw, 20px);
           } */
-          @media (max-width: 780px) {
-            font-size: clamp(12px, 4vw, 40px);
-          }
-          @media (max-width: 480px) {
-            font-size: clamp(20px, 6vw, 70px);
-          }
+          // @media (max-width: 780px) {
+          //   font-size: clamp(12px, 4vw, 40px);
+          // }
+          // @media (max-width: 480px) {
+          //   font-size: clamp(20px, 6vw, 70px);
+          // }
         }
       }
     }
@@ -194,17 +127,9 @@
       align-items: center;
 
       p {
-        font-size: clamp(100px, 24vw, 220px);
+        font-size: clamp(100px, 24vw, 220px); 
 
-        @media (max-width: 1340px) {
-          font-size: clamp(80px, 20vw, 180px);
-        }
-        @media (max-width: 1080px) {
-          font-size: clamp(70px, 18vw, 150px);
-        }
-        @media (max-width: 980px) {
-          font-size: clamp(50px, 15vw, 120px);
-        }
+        color: $color-orange;
       }
     }
 
@@ -243,7 +168,7 @@
             margin-top: 10rem;
             p {
               margin-top: 62vh;
-              margin-left: 2vw;
+              
               color: $color-white;
               font-size: clamp(20px, 5vw, 45px);
             }
@@ -267,7 +192,7 @@
             margin-top: 10rem;
             p {
               margin-top: 62vh;
-              margin-left: 2vw;
+              
               color: $color-white;
               font-size: clamp(20px, 5vw, 45px);
             }
@@ -291,7 +216,7 @@
             margin-top: 10rem;
             p {
               margin-top: 62vh;
-              margin-left: 2vw;
+              
               color: $color-white;
               font-size: clamp(20px, 5vw, 45px);
             }
@@ -315,7 +240,7 @@
             margin-top: 10rem;
             p {
               margin-top: 62vh;
-              margin-left: 2vw;
+              
               color: $color-white;
               font-size: clamp(20px, 5vw, 45px);
             }
@@ -339,7 +264,7 @@
             margin-top: 10rem;
             p {
               margin-top: 62vh;
-              margin-left: 2vw;
+              
               color: $color-white;
               font-size: clamp(20px, 5vw, 45px);
             }
@@ -836,5 +761,32 @@
     .hidden {
       display: none;
     }
+  }
+
+  .how-we-work-item {
+    padding: 20vh 0;
+
+
+    .about-phrase { 
+
+      h3 {
+        
+        color: $color-orange;
+        margin-bottom: 140px;  
+
+        sub {
+          &:nth-child(1) {
+            font-size: clamp(14px, 8vw, 28px);
+            margin-left: -1vw;
+            line-height: 0.5;
+          }
+          &:nth-child(2) {
+            line-height: 1;
+          }
+    
+          display: block;
+        }
+      }
+     }
   }
 }
