--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800;900&display=swap');
 
 @import "./scss/colors";
 @import "./scss/lenis";
@@ -10,8 +9,12 @@
 @import "./scss/hero";
 @import "./scss/fade-hero";
 @import "./scss/about";
+
 @import "./scss/how-we-work";
+@import "./scss/modal";
+
 @import "./scss/footer";
+@import "./scss/slogan";
 
 html,
 body {
@@ -19,5 +22,10 @@ body {
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "komet", sans-serif;
   //cursor: none;
+}
+
+p {
+  color: $color-white;
 }
