--- a/scss/_how-we-work.scss
+++ b/scss/_how-we-work.scss
@@ -151,7 +151,7 @@
         }
 
         .work-item-fred {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
   
@@ -175,7 +175,7 @@
           }
         }
         .work-item-mei {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
   
@@ -199,7 +199,7 @@
           }
         }
         .work-item-thyme {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
   
@@ -223,7 +223,7 @@
           }
         }
         .work-item-brand {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
   
@@ -247,7 +247,7 @@
           }
         }
         .work-item-wig {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
   
@@ -294,7 +294,7 @@
 
         // FREDERIKS
         .work-slide-item-fred-first {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -307,14 +307,14 @@
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover; */
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
           }
         }
         .work-slide-item-fred-second {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -328,14 +328,14 @@
           background-repeat: no-repeat;
           background-size: cover; */
 
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
           }
         }
         .work-slide-item-fred-third {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -349,7 +349,7 @@
           background-repeat: no-repeat;
           background-size: cover; */
 
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
@@ -358,7 +358,7 @@
 
         // MEIJER
         .work-slide-item-mei-first {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -372,14 +372,14 @@
           background-repeat: no-repeat;
           background-size: cover; */
 
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
           }
         }
         .work-slide-item-mei-second {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -393,14 +393,14 @@
           background-repeat: no-repeat;
           background-size: cover; */
 
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
           }
         }
         .work-slide-item-mei-third {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -414,14 +414,14 @@
           background-repeat: no-repeat;
           background-size: cover; */
 
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
           }
         }
         .work-slide-item-mei-fourth {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -434,14 +434,14 @@
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover; */
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
           }
         }
         .work-slide-item-mei-fifth {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -454,7 +454,7 @@
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover; */
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
@@ -463,7 +463,7 @@
 
         // THYME
         .work-slide-item-thyme-first {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -476,14 +476,15 @@
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover; */
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
           }
         }
+
         .work-slide-item-thyme-second {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -496,14 +497,14 @@
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover; */
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
           }
         }
         .work-slide-item-thyme-third {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -516,7 +517,7 @@
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover; */
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
@@ -525,7 +526,7 @@
 
         // BRAND
         .work-slide-item-brand-first {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -538,14 +539,14 @@
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover; */
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
           }
         }
         .work-slide-item-brand-second {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -558,14 +559,14 @@
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover; */
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
           }
         }
         .work-slide-item-brand-third {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -578,7 +579,7 @@
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover; */
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
@@ -587,7 +588,7 @@
 
         // WIGGLES
         .work-slide-item-wig-first {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -600,14 +601,14 @@
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover; */
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
           }
         }
         .work-slide-item-wig-second {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -620,14 +621,14 @@
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover; */
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
           }
         }
         .work-slide-item-wig-third {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -640,7 +641,7 @@
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover; */
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
@@ -649,7 +650,7 @@
 
         // DOLE
         .work-slide-item-dole-first {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -662,14 +663,14 @@
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover; */
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
           }
         }
         .work-slide-item-dole-second {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -682,14 +683,14 @@
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover; */
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
           }
         }
         .work-slide-item-dole-third {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -702,7 +703,7 @@
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover; */
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
@@ -711,7 +712,7 @@
 
         // BYE
         .work-slide-item-bye-first {
-          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          
           height: 70vh;
           width: 60vw;
           overflow: hidden;
@@ -725,7 +726,7 @@
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover; */
-          background-color: #000;
+          
 
           &:hover {
             cursor: pointer;
@@ -790,3 +791,44 @@
      }
   }
 }
+
+
+.how-we-work .our-work-wrapper .projects-section .work-container .name p {
+  padding-left: 24px;
+  box-sizing: border-box;
+}
+
+.work-item {
+  border-radius: 32px;
+}
+
+.work-slide {
+  background-color: #000;
+  border-radius: 16px;
+  overflow: hidden;
+}
+
+.work-slide-img {
+  background-color: transparent !important;
+  border-radius: 0 !important;
+
+  img {
+    width: auto;
+    height: 100%;
+
+    border-radius: 16px;
+    overflow: hidden;
+  }
+
+  &--landscape {
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+}
+
+// .swiper-slide .video {
+//   border-radius: 16px;
+//   overflow: hidden !important;
+// }
